--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,38 @@
-<p>
+<!-- <p>
   Hai {{user}}
 </p>
-<button>click me to test</button>
+<button>click me to test</button> -->
+
+<td-layout>
+  <td-navigation-drawer flex sidenavTitle="Covalent" logo="teradata" name={{user}} email={{user}}@teradata.com>
+    <!-- <mat-nav-list>
+    <a *ngFor="let item of routes" mat-list-item><mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a>
+  </mat-nav-list> -->
+    <div td-navigation-drawer-menu>
+      <mat-nav-list>
+        <a *ngFor="let item of usermenu" mat-list-item><mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a>
+      </mat-nav-list>
+    </div>
+  </td-navigation-drawer>
+  <td-layout-nav color="accent">
+    <div td-toolbar-content layout="row" layout-align="start center" flex>
+      <button mat-icon-button td-menu-button tdLayoutToggle>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <mat-icon class="mat-icon-logo cursor-pointer" svgIcon="teradata"></mat-icon>
+      <!-- <span class="cursor-pointer">Covalent</span> -->
+      <span flex></span>
+      <!-- <a mat-icon-button matTooltip="Docs" href="https://teradata.github.io/covalent/" target="_blank"><mat-icon>chrome_reader_mode</mat-icon></a>
+      <a mat-icon-button matTooltip="Github" href="https://github.com/teradata/covalent" target="_blank"><mat-icon svgIcon="assets:github"></mat-icon></a> -->
+    </div>
+    <img src="..\assets\keralafloods.jpg" alt="image" style="width:100%">
+    <td-layout-card-over color="accent" cardWidth="75">
+
+      <mat-card-title>Contrubute to kerala</mat-card-title>
+      <mat-card-subtitle>Hi {{user}},Donate for kerala</mat-card-subtitle>
+      <mat-card-content>
+        <app-form></app-form>
+      </mat-card-content>
+    </td-layout-card-over>
+  </td-layout-nav>
+</td-layout>
