--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -30,7 +30,7 @@
     <img src="..\assets\keralafloods.jpg" alt="image" style="width:100%">
     <td-layout-card-over color="accent" cardWidth="50">
       <mat-card-title>Contrubute to kerala</mat-card-title>
-      <mat-card-subtitle>Hi {{user}},Donate for kerala</mat-card-subtitle>
+      <mat-card-subtitle>Hi {{name}},Donate for kerala</mat-card-subtitle>
       <mat-card-content>
         <h1 *ngIf="check === undefined">{{loding}}</h1>
         <div *ngIf="user===undefined">
